python_scripts/logs/XGBoost_Randomforest_test_2.log
nohup: ignoring input
  File "/home/cat/descriptors/python_scripts/descriptor_models.py", line 341
    "XGBoost" XGBoost
            ^
SyntaxError: ':' expected after dictionary key
